--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,23 +17,21 @@ jobs:
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
-      - name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
       - name: Build ffmpeg
         run: |
           docker buildx build \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
+            --platform ${{ steps.buildx.outputs.platforms }} \
             --output "type=image,push=false" \
             --file ./ffmpeg/Dockerfile ./ffmpeg
       - name: Build subliminal
         run: |
           docker buildx build \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
+            --platform ${{ steps.buildx.outputs.platforms }} \
             --output "type=image,push=false" \
             --file ./subliminal/Dockerfile ./subliminal
       - name: Build caddy
         run: |
           docker buildx build \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
+            --platform ${{ steps.buildx.outputs.platforms }} \
             --output "type=image,push=false" \
             --file ./caddy/Dockerfile ./caddy
