--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,24 +16,26 @@ jobs:
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build ffmpeg
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6 \
-            --output "type=image,push=false" \
+            --output "type=image,push=true" \
             --tag maxcanna/ffmpeg \
             --file ./ffmpeg/Dockerfile ./ffmpeg
       - name: Build subliminal
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6 \
-            --output "type=image,push=false" \
+            --output "type=image,push=true" \
             --tag maxcanna/subliminal \
             --file ./subliminal/Dockerfile ./subliminal
       - name: Build caddy
         run: |
           docker buildx build \
             --platform linux/arm/v6 \
-            --output "type=image,push=false" \
-            --tag maxcanna/caddy
+            --output "type=image,push=true" \
+            --tag maxcanna/caddy \
             --file ./caddy/Dockerfile ./caddy
