--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,9 @@ jobs:
             --platform linux/arm/v6 \
             --output "type=image,push=false" \
             --file ./caddy/Dockerfile ./caddy
+      - name: Build transmission
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6 \
+            --output "type=image,push=false" \
+            --file ./transmission/Dockerfile ./transmission
