--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,3 +37,10 @@ jobs:
             --output "type=image,push=true" \
             --tag maxcanna/caddy \
             --file ./caddy/Dockerfile ./caddy
+      - name: Build transmission
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6 \
+            --output "type=image,push=true" \
+            --tag maxcanna/transmission \
+            --file ./transmission/Dockerfile ./transmission
