--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,3 +44,10 @@ jobs:
             --output "type=image,push=true" \
             --tag maxcanna/transmission \
             --file ./transmission/Dockerfile ./transmission
+      - name: Build minidlna
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6 \
+            --output "type=image,push=true" \
+            --tag maxcanna/minidlna \
+            --file ./minidlna/Dockerfile ./minidlna
