--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  buildx:
+  ffmpeg:
     runs-on: ubuntu-latest
     steps:
       - name: Set env vars
@@ -34,6 +34,22 @@ jobs:
             --tag maxcanna/ffmpeg:latest \
             --tag maxcanna/ffmpeg:$FFMPEG_VERSION \
             --file ./ffmpeg/Dockerfile ./ffmpeg
+  subliminal:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env vars
+        run: |
+          export DOCKER_PUSH=$([[ $GITHUB_REF == *"master"* ]] && echo "true" || echo "false")
+          echo Will push image: $DOCKER_PUSH
+          echo "::set-env name=DOCKER_PUSH::$DOCKER_PUSH"
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          buildx-version: latest
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Detect subliminal version
         run: |
           docker build -t maxcanna/subliminal:version -f ./subliminal/Dockerfile ./subliminal
@@ -48,6 +64,22 @@ jobs:
             --tag maxcanna/subliminal:latest \
             --tag maxcanna/subliminal:$SUBLIMINAL_VERSION \
             --file ./subliminal/Dockerfile ./subliminal
+  caddy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env vars
+        run: |
+          export DOCKER_PUSH=$([[ $GITHUB_REF == *"master"* ]] && echo "true" || echo "false")
+          echo Will push image: $DOCKER_PUSH
+          echo "::set-env name=DOCKER_PUSH::$DOCKER_PUSH"
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          buildx-version: latest
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Detect caddy version
         run: |
           docker build --build-arg TARGETOS=linux --build-arg TARGETARCH=amd64 -t maxcanna/caddy:version -f ./caddy/Dockerfile ./caddy
@@ -62,6 +94,22 @@ jobs:
             --tag maxcanna/caddy:latest \
             --tag maxcanna/caddy:$CADDY_VERSION \
             --file ./caddy/Dockerfile ./caddy
+  transmission:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env vars
+        run: |
+          export DOCKER_PUSH=$([[ $GITHUB_REF == *"master"* ]] && echo "true" || echo "false")
+          echo Will push image: $DOCKER_PUSH
+          echo "::set-env name=DOCKER_PUSH::$DOCKER_PUSH"
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          buildx-version: latest
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Detect transmission version
         run: |
           docker build -t maxcanna/transmission:version -f ./transmission/Dockerfile ./transmission
@@ -76,6 +124,22 @@ jobs:
             --tag maxcanna/transmission:latest \
             --tag maxcanna/transmission:$TRANSMISSION_VERSION \
             --file ./transmission/Dockerfile ./transmission
+  minidlna:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env vars
+        run: |
+          export DOCKER_PUSH=$([[ $GITHUB_REF == *"master"* ]] && echo "true" || echo "false")
+          echo Will push image: $DOCKER_PUSH
+          echo "::set-env name=DOCKER_PUSH::$DOCKER_PUSH"
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          buildx-version: latest
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Detect minidlna version
         run: |
           docker build -t maxcanna/minidlna:version -f ./minidlna/Dockerfile ./minidlna
