--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,4 +160,29 @@ jobs:
             --tag maxcanna/flexget:latest \
             --tag maxcanna/flexget:$FLEXGET_VERSION \
             --file ./flexget/Dockerfile ./flexget
-
+  openvpn:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env vars
+        run: |
+          echo DOCKER_PUSH=$([[ $GITHUB_REF == *"master"* ]] && echo "true" || echo "false") >> $GITHUB_ENV
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          buildx-version: latest
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Detect openvpn version
+        run: |
+          docker build -t maxcanna/openvpn:version -f ./openvpn/Dockerfile ./openvpn
+          echo OPENVPN_VERSION=$(docker run --rm --entrypoint openvpn maxcanna/openvpn:version --version | xargs | cut -d ' ' -f 2) >> $GITHUB_ENV
+      - name: Build openvpn
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6 \
+            --output "type=image,push=$DOCKER_PUSH" \
+            --tag maxcanna/openvpn:latest \
+            --tag maxcanna/openvpn:$OPENVPN_VERSION \
+            --file ./openvpn/Dockerfile ./openvpn
