--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -4,8 +4,8 @@ ARG TARGETOS
 ARG TARGETARCH
 ARG TARGETVARIANT
 
-RUN apk add --no-cache --update jq curl go
-RUN curl -sL $(curl -s https://api.github.com/repos/caddyserver/xcaddy/releases | jq -r '[.[].assets[] | select( .name | test(".*'${TARGETOS}'_'.?${TARGETARCH}${TARGETVARIANT}'.*gz"; "i"))][0] | .browser_download_url') | tar -xz -C /usr/bin xcaddy
+RUN apk add --no-cache --update jq go
+RUN wget -qO- $(wget -qO- https://api.github.com/repos/caddyserver/xcaddy/releases | jq -r '[.[].assets[] | select( .name | test(".*'${TARGETOS}'_'.?${TARGETARCH}${TARGETVARIANT}'.*gz"; "i"))][0] | .browser_download_url') | tar -xz -C /usr/bin xcaddy
 RUN xcaddy build --output /usr/bin/caddy --with github.com/darkweak/souin/plugins/caddy
 
 FROM alpine
