--- a/transmission/Dockerfile
+++ b/transmission/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 LABEL maintainer Massimiliano Cannarozzo <massi@massi.dev>
 
-RUN apk add --no-cache --update transmission-daemon
+RUN apk add --no-cache --update transmission-daemon curl transmission-cli docker-cli bash jq
 
 ENTRYPOINT ["transmission-daemon"]
 CMD ["-h"]
