--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,3 +188,29 @@ jobs:
             --tag maxcanna/openvpn:latest \
             --tag maxcanna/openvpn:$OPENVPN_VERSION \
             --file ./openvpn/Dockerfile ./openvpn
+  cloudflared:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env vars
+        run: |
+          echo DOCKER_PUSH=$([[ $GITHUB_REF == *"master"* ]] && echo "true" || echo "false") >> $GITHUB_ENV
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          buildx-version: latest
+      - name: Docker login
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Detect cloudflared version
+        run: |
+          docker build --build-arg TARGETOS=linux --build-arg TARGETARCH=amd64 -t maxcanna/cloudflared:version -f ./cloudflared/Dockerfile ./caddy
+          echo CLOUDFLARED_VERSION=$(docker run --rm maxcanna/cloudflared:version version | cut -d ' ' -f 3) >> $GITHUB_ENV
+      - name: Build cloudflared
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6 \
+            --output "type=image,push=$DOCKER_PUSH" \
+            --tag maxcanna/cloudflared:latest \
+            --tag maxcanna/cloudflared:$CLOUDFLARED_VERSION \
+            --file ./cloudflared/Dockerfile ./cloudflared
