Use prebuilt caddy binaries
Not using any custom plugin there's no need to build it each time

--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -1,12 +1,11 @@
-FROM golang:alpine AS build
-
-ARG TARGETOS
-ARG TARGETARCH
-ARG TARGETVARIANT
+FROM --platform=$BUILDPLATFORM alpine AS build
 
 RUN apk add --no-cache --update jq
-RUN wget -qO- $(wget -qO- https://api.github.com/repos/caddyserver/xcaddy/releases | jq -r '[.[].assets[] | select( .name | test(".*'${TARGETOS}'_'.?${TARGETARCH}${TARGETVARIANT}'.*gz"; "i"))][0] | .browser_download_url') | tar -xz -C /usr/bin xcaddy
-RUN xcaddy build --output /usr/bin/caddy
+
+ARG TARGETOS TARGETARCH TARGETVARIANT
+
+RUN wget -qO- $(wget -qO- https://api.github.com/repos/caddyserver/caddy/releases | jq -r '[.[].assets[] | select( .name | test("caddy_.*_'${TARGETOS}'_'${TARGETARCH}${TARGETVARIANT}'.tar.gz"; "i"))][0] | .browser_download_url') | tar -xz -C /usr/bin caddy
+RUN chmod u+x /usr/bin/caddy
 
 FROM alpine
 LABEL maintainer Massimiliano Cannarozzo <massi@massi.dev>
