--- a/cloudflared/Dockerfile
+++ b/cloudflared/Dockerfile
@@ -1,9 +1,9 @@
 FROM --platform=$BUILDPLATFORM alpine AS build
 
-ARG TARGETOS
-ARG TARGETARCH
-
 RUN apk add --no-cache --update jq
+
+ARG TARGETOS TARGETARCH
+
 RUN wget -qO /usr/bin/cloudflared $(wget -qO- https://api.github.com/repos/cloudflare/cloudflared/releases | jq -r '[.[].assets[] | select( .name | test("cloudflared-'${TARGETOS}'-'${TARGETARCH}'"; "i"))][0] | .browser_download_url')
 RUN chmod u+x /usr/bin/cloudflared
 
