--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Detect cloudflared version
         run: |
-          docker build --build-arg TARGETOS=linux --build-arg TARGETARCH=amd64 -t maxcanna/cloudflared:version -f ./cloudflared/Dockerfile ./caddy
+          docker buildx build --load -t maxcanna/cloudflared:version -f ./cloudflared/Dockerfile ./caddy
           echo CLOUDFLARED_VERSION=$(docker run --rm maxcanna/cloudflared:version version | cut -d ' ' -f 3) >> $GITHUB_ENV
       - name: Build cloudflared
         run: |
