--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -223,3 +223,34 @@ jobs:
           tags: maxcanna/cloudflared:latest,maxcanna/cloudflared:${{ env.CLOUDFLARED_VERSION }}
           push: ${{ env.DOCKER_PUSH }}
           platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6
+  airconnect:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env vars
+        run: |
+          echo DOCKER_PUSH=$([[ $GITHUB_REF == *"master"* ]] && echo "true" || echo "false") >> $GITHUB_ENV
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build airconnect version
+        uses: docker/build-push-action@v4
+        with:
+          context: "{{defaultContext}}:airconnect"
+          tags: maxcanna/airconnect:version
+          load: true
+      - name: Detect airconnect version
+        run: |
+          echo AIRCONNECT_VERSION=$(docker run --rm maxcanna/airconnect:version | xargs | cut -d ' ' -f 1) >> $GITHUB_ENV
+      - name: Build airconnect
+        uses: docker/build-push-action@v4
+        with:
+          context: "{{defaultContext}}:airconnect"
+          tags: maxcanna/airconnect:latest,maxcanna/airconnect:${{ env.AIRCONNECT_VERSION }}
+          push: ${{ env.DOCKER_PUSH }}
+          platforms: linux/amd64,linux/arm/v7,linux/arm/v6
